5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1575_1330.log
== TEST (2019-03-12 11:49:33) 
-- CODE:
print(41.6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:35) 
-- CODE:
print(41.6)
-- EXECUTION TIME:
0.130752
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:58) 
-- CODE:
round(42)
-- EXECUTION TIME:
0.183655
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:00) 
-- CODE:
round(42)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:05) 
-- CODE:
round(42)
-- EXECUTION TIME:
0.164922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:18) 
-- CODE:
round(41.6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:22) 
-- CODE:
round(41.6)
-- EXECUTION TIME:
0.141393
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:38) 
-- CODE:
round(41,6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:41) 
-- CODE:
round(41,6)
-- EXECUTION TIME:
0.147679
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:20) 
-- CODE:
print(41,6)
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:23) 
-- CODE:
print(41,6)
-- EXECUTION TIME:
0.207371
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:32) 
-- CODE:
print(41.6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:35) 
-- CODE:
print(41.6)
-- EXECUTION TIME:
0.125954
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:47) 
-- CODE:
print(41.66666)
-- OUTPUT:
41.66666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:49) 
-- CODE:
print(41.66666)
-- EXECUTION TIME:
0.198132
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:35) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:52:37) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.138538
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:46) 
-- CODE:
round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:52:49) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.189544
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:52:55) 
-- CODE:
round(42)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:52:58) 
-- CODE:
round(42)
-- EXECUTION TIME:
0.15843
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:42) 
-- CODE:
round(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:54:44) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.132296
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:51) 
-- CODE:
round(42)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:54:53) 
-- CODE:
round(42)
-- EXECUTION TIME:
0.20359
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:08) 
-- CODE:
round(41,6)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:11) 
-- CODE:
round(41,6)
-- EXECUTION TIME:
0.157922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:16) 
-- CODE:
round(41.6)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:55:19) 
-- CODE:
round(41.6)
-- EXECUTION TIME:
0.154773
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:19) 
-- CODE:
round(42)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:57:22) 
-- CODE:
round(42)
-- EXECUTION TIME:
0.144082
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:41) 
-- CODE:
print(42)
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:57:44) 
-- CODE:
print(42)
-- EXECUTION TIME:
0.138024
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:07) 
-- CODE:
print(41.6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:10) 
-- CODE:
print(41.6)
-- EXECUTION TIME:
0.156042
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:17) 
-- CODE:
print(41.5)
-- OUTPUT:
41.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:19) 
-- CODE:
print(41.5)
-- EXECUTION TIME:
0.169053
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:41:02) 
-- CODE:
print(round(41,1))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:41:06) 
-- CODE:
print(round(41,1))
-- EXECUTION TIME:
0.152154
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:41:30) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.159283
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:42:21) 
-- CODE:
print (41,66666667)
-- OUTPUT:
41 66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:42:27) 
-- CODE:
print (41,66666667)
-- OUTPUT:
41 66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:42:32) 
-- CODE:
print (41,66666667)
-- EXECUTION TIME:
0.187941
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:44:42) 
-- CODE:
round(41,6)
-- OUTPUT:
41 66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:44:46) 
-- CODE:
round(41,6)
-- EXECUTION TIME:
0.167898
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:45:09) 
-- CODE:
print(round(41,6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:45:12) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.140645
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:45:34) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:45:38) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.185199
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:47:31) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.236765
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:47:49) 
-- CODE:
print(round(41,67))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:47:54) 
-- CODE:
print(round(41,67))
-- EXECUTION TIME:
0.223317
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:48:25) 
-- CODE:
print(round(41,6))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:48:34) 
-- CODE:
print(round(41,6))
-- EXECUTION TIME:
0.175423
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:48:42) 
-- CODE:
print(round(41))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:48:43) 
-- CODE:
print(round(41))
-- EXECUTION TIME:
0.201147
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:53:17) 
-- CODE:
print(round(41,6)
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:53:23) 
-- CODE:
print(round(41,6)
-- EXECUTION TIME:
0.197137
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:54:07) 
-- CODE:
print(round(41))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:55:43) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:55:59) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.155987
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:56:41) 
-- CODE:
round(41,66)
print(41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:56:44) 
-- CODE:
round(41,66)
print(41)
-- EXECUTION TIME:
0.177988
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:16:37) 
-- CODE:
  print(250/6,2)
-- ERROR:
File "XXXX", line 1
    print(250/6,2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:16:40) 
-- CODE:
  print(250/6,2)
-- EXECUTION TIME:
0.208849
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(250/6,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:17:02) 
-- CODE:
  print(round(250/0))
-- ERROR:
File "XXXX", line 1
    print(round(250/0))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:17:06) 
-- CODE:
  print(round(250/0))
-- EXECUTION TIME:
0.178097
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(round(250/0))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:19:30) 
-- CODE:
  print(round(250/6))
-- ERROR:
File "XXXX", line 1
    print(round(250/6))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:19:44) 
-- CODE:
  print(round(250/6))
-- EXECUTION TIME:
0.191175
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(round(250/6))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:24:30) 
-- CODE:
  print(41.67)
-- ERROR:
File "XXXX", line 1
    print(41.67)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:24:38) 
-- CODE:
  print(41.67)
-- EXECUTION TIME:
0.118512
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(41.67)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:25:22) 
-- CODE:
  print(round(41.67))
-- ERROR:
File "XXXX", line 1
    print(round(41.67))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:25:34) 
-- CODE:
  print(round(41.67))
-- EXECUTION TIME:
0.19043
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(round(41.67))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:27:00) 
-- CODE:
  print("41.67")
-- ERROR:
File "XXXX", line 1
    print("41.67")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:27:04) 
-- CODE:
  print("41.67")
-- EXECUTION TIME:
0.133339
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print("41.67")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:54:23) 
-- CODE:
  print(250/6 , 2)
-- ERROR:
File "XXXX", line 1
    print(250/6 , 2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:54:36) 
-- CODE:
  print(250/6,2)
-- ERROR:
File "XXXX", line 1
    print(250/6,2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:54:40) 
-- CODE:
  print(250/6,2)
-- EXECUTION TIME:
0.278477
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(250/6,2)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:55:16) 
-- CODE:
  print(round(250/6,2))
-- ERROR:
File "XXXX", line 1
    print(round(250/6,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:55:31) 
-- CODE:
  print(round(250/6))
-- ERROR:
File "XXXX", line 1
    print(round(250/6))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:55:48) 
-- CODE:
  print(round(41,6))
-- ERROR:
File "XXXX", line 1
    print(round(41,6))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:56:04) 
-- CODE:
  print(round(41,6))
-- ERROR:
File "XXXX", line 1
    print(round(41,6))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 20:56:50) 
-- CODE:
  print(round(41,67))
-- ERROR:
File "XXXX", line 1
    print(round(41,67))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 20:57:03) 
-- CODE:
  print(round(41,67))
-- EXECUTION TIME:
0.139484
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(round(41,67))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:23:37) 
-- CODE:
  print(round(41,67))
-- EXECUTION TIME:
0.141301
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print(round(41,67))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:24:12) 
-- CODE:
  print(41,6)
-- ERROR:
File "XXXX", line 1
    print(41,6)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:02:18) 
-- CODE:
  print("41.6")
-- ERROR:
File "XXXX", line 1
    print("41.6")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:02:24) 
-- CODE:
  print("41.67")
-- ERROR:
File "XXXX", line 1
    print("41.67")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:02:32) 
-- CODE:
  print("41.67")
-- EXECUTION TIME:
0.211279
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print("41.67")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:02:32) 
-- CODE:
  print("41.67")
-- EXECUTION TIME:
0.172402
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 1
    print("41.67")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:02:32) 
-- CODE:
  print("41.67")
-- EXECUTION TIME:
0.0943072
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1575/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:02:43) 
-- CODE:
print("41.67")
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:02:46) 
-- CODE:
print("41.67")
-- EXECUTION TIME:
0.202439
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
